Fix border height on small pages
Swap out height: 100vh for min-height: 100vh

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -68,6 +68,7 @@
 .border {
   display: flex;
   flex: 1 1 auto;
+  min-height: 100vh;
   background-attachment: fixed;
   background-color: var(--black);
   background-image: url("../images/wireframe.svg");
